# slurm-actions

./: .gitignore  README.md
ghwebhook/: Cargo.toml
ghwebhook/crates/api/: Cargo.toml
ghwebhook/crates/api/src/: main.rs
ghwebhook/crates/api/src/config/: mod.rs
ghwebhook/crates/api/src/routes/: mod.rs
ghwebhook/crates/api/src/services/: mod.rs
ghwebhook/crates/api/src/types/: mod.rs
ghwebhook/crates/lib/: Cargo.toml
ghwebhook/crates/lib/src/: lib.rs
ghwebhook/crates/lib/src/errors/: mod.rs
ghwebhook/crates/lib/src/types/: githubevent.rs  mod.rs  workflow.rs
ghwebhook/crates/rabbitmq-worker/: Cargo.toml
ghwebhook/crates/rabbitmq-worker/src/: main.rs
ghwebhook/crates/rabbitmq-worker/src/config/: mod.rs
ghwebhook/crates/rabbitmq-worker/src/services/: mod.rs
ghwebhook/workspace-hack/: Cargo.toml
infrastructure/ansible/: setup-slurm-compute.yaml  setup-slurm-controller.yaml
infrastructure/ansible/files/slurm/: slurm.conf  slurmdbd.conf  slurmrestd.service
infrastructure/terraform/: main.tf  outputs.tf  terraform.tf  variables.tf
infrastructure/terraform/files/: slurm-compute-init.yaml  slurm-controller-init.yaml
