[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
rocket_cors = "0.6.0"
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["full"] }
config = "0.15.17"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
workspace-hack = { version = "0.1", path = "../../workspace-hack" }
lib = { path = "../../crates/lib" }
rabbitmq-stream-client = "0.9.0"
