[package]
name = "rabbitmq-worker"
version = "0.1.0"
edition = "2024"

[dependencies]
workspace-hack = { version = "0.1", path = "../../workspace-hack" }
lib = { path = "../../crates/lib" }
rabbitmq-stream-client = "0.9.0"
config = "0.15.17"
thiserror = "2.0.17"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
futures-util = "0.3.31"
serde_json = "1.0.145"
tempdir = "0.3.7"
glob = "0.3.3"
serde_yaml = "0.9.34"
reqwest = { version = "0.12.23", features = ["json"] }
dotenvy = "0.15.7"
